--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <title>$tock $tart</title>
     <link rel="stylesheet" href="home.css">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
   </head>
   <body>
-    
+    <div id="enter-btn-div">
+      <button type="button" name="enter" id="enter-button">Wealth begins here...</button>
+    </div>
     <script type="text/javascript" src="home.js"></script>
   </body>
 </html>
