--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
   </head>
   <body>
-    <div id="enter-btn-div">
-      <button type="button" name="enter" id="enter-button">Wealth begins here...</button>
+    <div class="enter">
+      <h1 id="enter-button">Wealth begins here</h1>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="home.js"></script>
   </body>
 </html>
