more landing page styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="enter">
-      <h1 id="enter-button">Wealth begins here</h1>
+      <h1 id="enter-button">Your path to <span>wealth</span> begins here...</h1>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="home.js"></script>
