additional landing page styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>$tock $tart</title>
     <link rel="stylesheet" href="home.css">
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Barlow|Cabin" rel="stylesheet">
   </head>
   <body>
     <div class="enter">
