more styling of home page; started section titles

--- a/intro.html
+++ b/intro.html
@@ -7,13 +7,17 @@
     <link href="https://fonts.googleapis.com/css?family=Abel|Barlow|Cabin" rel="stylesheet">
   </head>
   <body>
-    
+
     <section class="header" id="header">
-      <h1 class="header" id="header-title"><a href="index.html" target="">$tock $tart</a></h1>
+      <h1 class="header" id="header-title"><a href="index.html" target=""><span class="dollar">$</span>tock <span class="dollar">$</span>tart</a></h1>
     </section>
 
-    <section id="section_one">
+    <section class="section-one" id="section-one">
+      <div class="intro-para"><h2>What is $tock $tart?</h2></div>
+    </section>
 
+    <section class="section-two" id="section-two">
+      <div class=""><div class="para-2"><h2>Why Participate in the Stock Market?</h2></div></div>
     </section>
   </body>
 </html>
