content to intro page

--- a/intro.html
+++ b/intro.html
@@ -13,7 +13,10 @@
     </section>
 
     <section class="section-one" id="section-one">
-      <div class="intro-para"><h2>What is $tock $tart?</h2></div>
+      <div class="intro-para">
+        <h2>What is $tock $tart?</h2>
+        <p>"$tock $tart" is designed to assist those who are hesitant about participating in the stock market, yet have a desire to start investing in stocks. The goal is to help align company stock choices with an individual's financial goals and risk tolerance.</p>
+      </div>
     </section>
 
     <section class="section-two" id="section-two">
