--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="enter" id="enter-div">
-      <a href="intro.html" target=""><h1 class="enter-button" id="enter-button">Your path to wealth begins here...</h1></a>
+      <a href="intro.html" target=""><h1 class="enter-button hide" id="enter-button">Your path to wealth begins here...</h1></a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="home.js"></script>
