--- a/intro.html
+++ b/intro.html
@@ -15,12 +15,15 @@
     <section class="section-one" id="section-one">
       <div class="intro-para">
         <h2>What is $tock $tart?</h2>
-        <p>"$tock $tart" is designed to assist those who are hesitant about participating in the stock market, yet have a desire to start investing in stocks. The goal is to help align company stock choices with an individual's financial goals and risk tolerance.</p>
+        <p>"$tock $tart" is designed to assist those who are hesitant about participating in the stock market, yet have a desire to start investing in stocks. The goal is to help align stock choices with an individual's personal interests, financial goals, and risk tolerance.</p>
       </div>
     </section>
 
     <section class="section-two" id="section-two">
-      <div class=""><div class="para-2"><h2>Why Participate in the Stock Market?</h2></div></div>
+      <div class="para-2">
+        <h2>Why Participate in the Stock Market?</h2>
+        <p>The journey of building wealth often requires multiple streams of income. Investing in the stock market has been a proven path, among many, towards financial freedom. While rewards are never guaranteed, responsible analysis and proper risk management can lead to consistent profits. More wins. Fewer losses. The ultimate goal of $tock $tart is help people come to the realization that investing in stocks does not have to be a frightening or unnecessarily complex experience.</p>
+      </div>
     </section>
   </body>
 </html>
