styling of intro page; footer and section image

--- a/intro.html
+++ b/intro.html
@@ -20,10 +20,17 @@
     </section>
 
     <section class="section-two" id="section-two">
-      <div class="para-2">
-        <h2 id="header-2">Why Participate in the Stock Market?</h2>
-        <p id="para-2">The journey of building wealth often requires multiple streams of income. Investing in the stock market has been a proven path, among many, towards financial freedom. While rewards are never guaranteed, responsible analysis and proper risk management can lead to consistent profits. More wins. Fewer losses. The ultimate goal of $tock $tart is help people come to the realization that investing in stocks does not have to be a frightening or unnecessarily complex experience.</p>
+    </section>
+
+    <section class="section-three" id="section-three">
+      <div class="para-3">
+        <h2 id="header-3">Why Participate in the Stock Market?</h2>
+        <p id="para-3">Building wealth is a journey that often favors those with multiple streams of income. Investing in the stock market has been a proven path, among many, towards financial freedom. While rewards are never guaranteed, responsible analysis and proper risk management can lead to consistent profits. More wins. Fewer losses. The ultimate goal of $tock $tart is help people come to the realization that investing in stocks does not have to be an intimidating or overly complex experience.</p>
       </div>
     </section>
+
+    <footer id="footer">
+      <p>&copy; CJLesesne 2017 -- $tock $tart</p>
+    </footer>
   </body>
 </html>
