--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>$tock $tart</title>
+    <meta name="viewport" content="intial-scale=1">
     <link rel="stylesheet" href="home.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Barlow|Cabin" rel="stylesheet">
   </head>
