--- a/intro.html
+++ b/intro.html
@@ -25,7 +25,8 @@
     <section class="section-three" id="section-three">
       <div class="para-3">
         <h2 id="header-3">Why Participate in the Stock Market?</h2>
-        <p id="para-3">Building wealth is a journey that often favors those with multiple streams of income. Investing in the stock market has been a proven path, among many, towards financial freedom. While rewards are never guaranteed, responsible analysis and proper risk management can lead to consistent profits. More wins. Fewer losses. The ultimate goal of $tock $tart is help people come to the realization that investing in stocks does not have to be an intimidating or overly complex experience.</p>
+        <p id="para-3">Building wealth is a journey that often favors those with multiple streams of income. Investing in the stock market has been a proven path, among many, towards financial freedom. While rewards are never guaranteed, responsible analysis and proper risk management can lead to consistent profits. More wins. Fewer losses. The ultimate goal of $tock $tart is help people come to the realization that investing in stocks does not have to be an intimidating or overly complex experience.</p><br>
+        <div id="begin-button"><button name="begin-journey" type="button">Ready to Begin Your Journey?</button></div>
       </div>
     </section>
 
