--- a/intro.html
+++ b/intro.html
@@ -33,5 +33,7 @@
     <footer id="footer">
       <p>&copy; CJLesesne 2017 -- $tock $tart</p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="intro.js"></script>
   </body>
 </html>
