--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome to $tock $tart</title>
-    <link rel="stylesheet" href="intro.css">
+    <link rel="stylesheet" href="styles/intro/intro.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Barlow|Cabin" rel="stylesheet">
   </head>
   <body>
@@ -14,7 +14,7 @@
 
     <section class="section-one" id="section-one">
       <div class="intro-para">
-        <h2>What is $tock $tart?</h2>
+        <!--h2>What is $tock $tart?</h2-->
         <p id="para-1">"$tock $tart" is designed to encourage those who are hesitant about participating in the stock market, yet have a desire to start investing in stocks. The goal is to help align stock choices with an individual's personal interests, financial goals, and risk tolerance.</p>
       </div>
     </section>
@@ -34,6 +34,6 @@
       <p>&copy; CJLesesne 2017 -- $tock $tart</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="intro.js"></script>
+    <script src="scripts/intro.js"></script>
   </body>
 </html>
