--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="intro.html" target=""><h1 class="enter-button hide" id="enter-button">Your path to wealth begins here...</h1></a>
     </div>
     <!--div class="audio" id="audio-div">
-      <audio src="Bach-USAFB_Air.mp3" autoplay="true" loop="1" controls="console" volume="0.5"></audio>
+      <audio src="audio/Bach-USAFB_Air.mp3" autoplay="true" loop="1" controls="console" volume="0.5"></audio>
     </div-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/home.js"></script>
