added risk/reward and interests section; internal page jumps; nav menu

--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,15 @@
   <body>
 
     <section class="header" id="header">
-      <h1 class="header" id="header-title"><a href="index.html" target=""><span class="dollar">$</span>tock <span class="dollar">$</span>tart</a></h1>
+      <h1 class="header" id="header-title"><a href="intro.html" target=""><span class="dollar">$</span>tock <span class="dollar">$</span>tart</a></h1>
+      <nav class="nav">
+        <ul class="top-nav">
+          <a href="#section-top-3"><li class="nav-li">Why Invest?</li></a>
+          <a href="#section-top-4"><li class="nav-li">Long-Term Thinking</li></a>
+          <a href="#section-top-5"><li class="nav-li">Buy What You Know</li></a>
+          <a href="#section-top-6"><li class="nav-li">The Risk-Factor!</li></a>
+        </ul>
+      </nav>
     </section>
 
     <!-- <section class="section-one" id="section-one">
@@ -21,6 +29,7 @@
     <section class="section-two" id="section-two">
     </section>
 
+    <span id="section-top-3"></span>
     <section class="section-three" id="section-three">
       <div class="para-3">
         <h2 id="header-3">Why Participate in the Stock Market?</h2>
@@ -29,19 +38,35 @@
       </div>
     </section>
 
+    <span id="section-top-4"></span>
     <section class="section-four" id="section-four">
       <div class="para-4">
-        <h2 id="header-4">First...let's get into a long-term financial mindset.</h2><br>
-        <p id="para-4">What financial priorities do you envision having 10 years from now?<br><br>
-                       Which technologies and products do you see being relevant in 10 years?<br><br>
-                       What percentage of your current monthly income could you set aside for an investment account?
+        <h2 id="header-4">First...getting into a long-term financial mindset.</h2><br>
+        <p id="para-4">What will your financial priorities be 10 years from now?<br><br>
+                       Which technologies and products do you envision being relevant in 10 years?<br><br>
+                       What percentage of your current monthly income can you contribute towards an investment account?
         </p>
       </div>
     </section>
 
-    <!-- <section class="section-five" id="section-five">
+    <span id="section-top-5"></span>
+    <section class="section-five" id="section-five">
+      <div class="para-5" id="div-5">
+        <h2 id="header-5">Interests + Knowledge = A Great Place to Start!</h2><br>
+        <p id="para-5">Are you knowledgeable about particular industries or companies?<br><br>
+                       What products and/or activities are worth spending money on to you?<br><br>
+                       Which industries are you interested in learning more about?
+        </p>
+      </div>
+    </section>
 
-    </section> -->
+    <span id="section-top-6"></span>
+    <section class="section-six" id="section-six">
+      <div class="para-6">
+        <h2 id="header-6">Risk...for Reward</h2>
+        <p id="para-6"></p>
+      </div>
+    </section>
 
     <footer id="footer">
       <p>&copy; CJLesesne 2018 -- $tock $tart</p>
