added content to risk/reward section

--- a/intro.html
+++ b/intro.html
@@ -41,10 +41,10 @@
     <span id="section-top-4"></span>
     <section class="section-four" id="section-four">
       <div class="para-4">
-        <h2 id="header-4">First...getting into a long-term financial mindset.</h2><br>
+        <h2 id="header-4">First things first...the long-term financial mindset.</h2><br>
         <p id="para-4">What will your financial priorities be 10 years from now?<br><br>
                        Which technologies and products do you envision being relevant in 10 years?<br><br>
-                       What percentage of your current monthly income can you contribute towards an investment account?
+                       What percentage of your income can you contribute towards an investment account?
         </p>
       </div>
     </section>
@@ -63,8 +63,10 @@
     <span id="section-top-6"></span>
     <section class="section-six" id="section-six">
       <div class="para-6">
-        <h2 id="header-6">Risk...for Reward</h2>
-        <p id="para-6"></p>
+        <h2 id="header-6">Risk &amp; Reward</h2>
+        <p id="para-6">Successful investors do not avoid risk...they manage it.<br><br>
+                       Emotions should not influence investment decisions.<br><br>
+                       Never invest what you cannot afford to lose!</p>
       </div>
     </section>
 
