--- a/intro.html
+++ b/intro.html
@@ -9,13 +9,13 @@
   <body>
 
     <section class="header" id="header">
-      <h1 class="header" id="header-title"><a href="intro.html" target=""><span class="dollar">$</span>tock <span class="dollar">$</span>tart</a></h1>
+      <h1 class="header" id="header-title"><a href="intro.html" id="link-title"><span class="dollar">$</span>tock <span class="dollar">$</span>tart</a></h1>
       <nav class="nav">
         <ul class="top-nav">
-          <a href="#section-top-3"><li class="nav-li">Why Invest?</li></a>
-          <a href="#section-top-4"><li class="nav-li">Long-Term Thinking</li></a>
-          <a href="#section-top-5"><li class="nav-li">Buy What You Know</li></a>
-          <a href="#section-top-6"><li class="nav-li">The Risk-Factor!</li></a>
+          <a href="#section-top-3"><li class="nav-li">&rarr;why invest?</li></a>
+          <a href="#section-top-4"><li class="nav-li">&rarr;think long-term</li></a>
+          <a href="#section-top-5"><li class="nav-li">&rarr;buy what you know</li></a>
+          <a href="#section-top-6"><li class="nav-li">&rarr;the risk factor</li></a>
         </ul>
       </nav>
     </section>
@@ -44,7 +44,7 @@
         <h2 id="header-4">First things first...the long-term financial mindset.</h2><br>
         <p id="para-4">What will your financial priorities be 10 years from now?<br><br>
                        Which technologies and products do you envision being relevant in 10 years?<br><br>
-                       What percentage of your income can you contribute towards an investment account?
+                       What percentage of your income can you set towards an investment account?
         </p>
       </div>
     </section>
@@ -54,7 +54,7 @@
       <div class="para-5" id="div-5">
         <h2 id="header-5">Interests + Knowledge = A Great Place to Start!</h2><br>
         <p id="para-5">Are you knowledgeable about particular industries or companies?<br><br>
-                       What products and/or activities are worth spending money on to you?<br><br>
+                       Which products and activities are worth your money?<br><br>
                        Which industries are you interested in learning more about?
         </p>
       </div>
