restyled header with logo; added content to risk/reward section

--- a/intro.html
+++ b/intro.html
@@ -9,13 +9,13 @@
   <body>
 
     <section class="header" id="header">
-      <h1 class="header" id="header-title"><a href="intro.html" id="link-title"><span class="dollar">$</span>tock <span class="dollar">$</span>tart</a></h1>
+      <h1 class="header" id="header-title"><a href="intro.html" id="link-title"><span class="dollar">$</span>tock<img src="img/racing-flag.png" id="race-flag"><span class="dollar">$</span>tart</a></h1>
       <nav class="nav">
         <ul class="top-nav">
-          <a href="#section-top-3"><li class="nav-li">&rarr;why invest?</li></a>
-          <a href="#section-top-4"><li class="nav-li">&rarr;think long-term</li></a>
-          <a href="#section-top-5"><li class="nav-li">&rarr;buy what you know</li></a>
-          <a href="#section-top-6"><li class="nav-li">&rarr;the risk factor</li></a>
+          <a href="#section-top-3"><li class="nav-li">&rarr; why invest?</li></a>
+          <a href="#section-top-4"><li class="nav-li">&rarr; think long-term</li></a>
+          <a href="#section-top-5"><li class="nav-li">&rarr; buy what you know</li></a>
+          <a href="#section-top-6"><li class="nav-li">&rarr; the risk factor</li></a>
         </ul>
       </nav>
     </section>
@@ -66,6 +66,7 @@
         <h2 id="header-6">Risk &amp; Reward</h2>
         <p id="para-6">Successful investors do not avoid risk...they manage it.<br><br>
                        Emotions should not influence investment decisions.<br><br>
+                       Invest, don't gamble...focus on consistency rather than "overnight success".<br><br>
                        Never invest what you cannot afford to lose!</p>
       </div>
     </section>
