added server.js and npm dependencies; edit content sections

--- a/intro.html
+++ b/intro.html
@@ -41,7 +41,7 @@
     <span id="section-top-4"></span>
     <section class="section-four" id="section-four">
       <div class="para-4">
-        <h2 id="header-4">First things first...the long-term financial mindset.</h2><br>
+        <h2 id="header-4">First...the long-term financial mindset.</h2><br>
         <p id="para-4">What will your financial priorities be 10 years from now?<br><br>
                        Which technologies and products do you envision being relevant in 10 years?<br><br>
                        What percentage of your income can you set towards an investment account?
@@ -54,7 +54,7 @@
       <div class="para-5" id="div-5">
         <h2 id="header-5">Interests + Knowledge = A Great Place to Start!</h2><br>
         <p id="para-5">Are you knowledgeable about particular industries or companies?<br><br>
-                       Which products and activities are worth your money?<br><br>
+                       What products and activities do you spend money on?<br><br>
                        Which industries are you interested in learning more about?
         </p>
       </div>
@@ -65,8 +65,8 @@
       <div class="para-6">
         <h2 id="header-6">Risk &amp; Reward</h2>
         <p id="para-6">Successful investors do not avoid risk...they manage it.<br><br>
-                       Emotions should not influence investment decisions.<br><br>
-                       Invest, don't gamble...focus on consistency rather than "overnight success".<br><br>
+                       Emotional responses should not influence investment decisions.<br><br>
+                       Invest, don't gamble...focus on consistency rather than "overnight" wealth.<br><br>
                        Never invest what you cannot afford to lose!</p>
       </div>
     </section>
