add stock quote search bar; begin building API call

--- a/intro.html
+++ b/intro.html
@@ -30,7 +30,7 @@
     </section>
 
     <span id="section-top-3"></span>
-    <section class="section-three" id="section-three">
+    <section class="page-section section-three" id="section-three">
       <div class="para-3">
         <h2 id="header-3">Why Participate in the Stock Market?</h2>
         <p id="para-3">Building wealth is a journey that often favors those with multiple streams of income. Investing in the stock market has been a proven path, among many, towards financial freedom. While rewards are never guaranteed, responsible analysis and proper risk management can lead to consistent profits. More wins. Fewer losses. The ultimate goal of $tock $tart is help people come to the realization that investing in stocks does not have to be an intimidating or overly complex experience.<br><br>"$tock $tart" is designed to encourage those who are hesitant about participating in the stock market, yet have a desire to start investing in stocks. The goal is to help align stock choices with an individual's personal interests, financial goals, and risk tolerance.</p><br>
@@ -39,7 +39,7 @@
     </section>
 
     <span id="section-top-4"></span>
-    <section class="section-four" id="section-four">
+    <section class="page-section section-four" id="section-four">
       <div class="para-4">
         <h2 id="header-4">First...the long-term financial mindset.</h2><br>
         <p id="para-4">What will your financial priorities be 10 years from now?<br><br>
@@ -50,18 +50,24 @@
     </section>
 
     <span id="section-top-5"></span>
-    <section class="section-five" id="section-five">
+    <section class="page-section section-five" id="section-five">
       <div class="para-5" id="div-5">
         <h2 id="header-5">Interests + Knowledge = A Great Place to Start!</h2><br>
         <p id="para-5">Are you knowledgeable about particular industries or companies?<br><br>
                        What products and activities do you spend money on?<br><br>
-                       Which industries are you interested in learning more about?
+                       Which industries are you interested in learning more about?<br><br>
+                       <p id="search-bar-title">Stock Quote Finder:</p>
+                       <form id="quote-find-form" autocomplete="on">
+                        <label for="">
+                          <input type="text" id="quote-search" placeholder="(enter company name)">
+                        </label>
+                      </form>
         </p>
       </div>
     </section>
 
     <span id="section-top-6"></span>
-    <section class="section-six" id="section-six">
+    <section class="page-section section-six" id="section-six">
       <div class="para-6">
         <h2 id="header-6">Risk &amp; Reward</h2>
         <p id="para-6">Successful investors do not avoid risk...they manage it.<br><br>
