test GET request for IEX stock API successful

--- a/intro.html
+++ b/intro.html
@@ -57,7 +57,7 @@
                        What products and activities do you spend money on?<br><br>
                        Which industries are you interested in learning more about?<br><br>
                        <p id="search-bar-title">Stock Quote Finder:</p>
-                       <form id="quote-find-form" autocomplete="on">
+                       <form id="quote-search-form" autocomplete="on">
                         <label for="">
                           <input type="text" id="quote-search" placeholder="(enter company name)">
                         </label>
