successful getJSON request;search bar works;appends stock price to section

--- a/intro.html
+++ b/intro.html
@@ -59,10 +59,10 @@
                        <p id="search-bar-title">Stock Quote Finder:</p>
                        <form id="quote-search-form" autocomplete="on">
                         <label for="">
-                          <input type="text" id="quote-search" placeholder="(enter company name)">
+                          <input type="text" id="quote-search" placeholder="(enter company symbol)">
                         </label>
                       </form>
-        </p>
+        </p><br>
       </div>
     </section>
 
