updated wording in interests section

--- a/intro.html
+++ b/intro.html
@@ -54,7 +54,7 @@
       <div class="para-5" id="div-5">
         <h2 id="header-5">Interests + Knowledge = A Great Place to Start!</h2><br>
         <p id="para-5">Are you knowledgeable about particular industries or companies?<br><br>
-                       What products and activities do you spend money on?<br><br>
+                       What products and services do you regularly purchase?<br><br>
                        Which industries are you interested in learning more about?<br><br>
                        <p id="search-bar-title">Stock Quote Finder:</p>
                        <form id="quote-search-form" autocomplete="on">
