--- a/intro.html
+++ b/intro.html
@@ -64,6 +64,34 @@
                       </form>
         </p><br><br>
       </div>
+      <!-- TradingView Widget BEGIN -->
+      <div class="tradingview-widget-container">
+        <div id="tv-medium-widget"></div>
+        <div class="tradingview-widget-copyright"><span class="blue-text"><a href="https://www.tradingview.com/symbols/MSFT/" rel="noopener" target="_blank"><span class="blue-text">Microsoft</span></a></span> <span class="blue-text">Quotes</span> by TradingView</div>
+        <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+        <script type="text/javascript">
+        new TradingView.MediumWidget(
+        {
+        "container_id": "tv-medium-widget",
+        "symbols": [
+          [
+            "Microsoft",
+            "MSFT"
+          ]
+        ],
+        "greyText": "Quotes by",
+        "gridLineColor": "#e9e9ea",
+        "fontColor": "rgba(0, 0, 0, 1)",
+        "underLineColor": "#dbeffb",
+        "trendLineColor": "#4bafe9",
+        "width": "1000px",
+        "height": "400px",
+        "locale": "en"
+        }
+        );
+        </script>
+      </div>
+      <!-- TradingView Widget END -->
     </section>
 
     <span id="section-top-6"></span>
