--- a/intro.html
+++ b/intro.html
@@ -65,7 +65,7 @@
         </p><br><br>
       </div>
       <!-- TradingView Widget BEGIN -->
-      <div class="tradingview-widget-container">
+      <!-- <div class="tradingview-widget-container">
         <div id="tv-medium-widget"></div>
         <div class="tradingview-widget-copyright"><span class="blue-text"><a href="https://www.tradingview.com/symbols/MSFT/" rel="noopener" target="_blank"><span class="blue-text">Microsoft</span></a></span> <span class="blue-text">Quotes</span> by TradingView</div>
         <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
@@ -90,7 +90,7 @@
         }
         );
         </script>
-      </div>
+      </div> -->
       <!-- TradingView Widget END -->
     </section>
 
@@ -110,5 +110,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="scripts/intro.js"></script>
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   </body>
 </html>
