updated intro page with removed summary paragraph

--- a/intro.html
+++ b/intro.html
@@ -44,7 +44,7 @@
         <h2 id="header-4">First...the long-term financial mindset.</h2><br>
         <p id="para-4">What will your financial priorities be 10 years from now?<br><br>
                        Which technologies and products do you envision being relevant in 10 years?<br><br>
-                       What percentage of your income can you set towards an investment account?
+                       What percentage of your income can you commit towards investing?
         </p>
       </div>
     </section>
